First implementation of remote job upload
